fix alerts position and color and actions-menu z-index

--- a/themes/timtec/static/css/less/actions-menu.less
+++ b/themes/timtec/static/css/less/actions-menu.less
@@ -3,9 +3,10 @@
     background-color: transparent;
     margin: 0;
     top: 60px;
-    z-index: 900;
+    z-index: 800;
     .actions-buttons {
-        left: 15px;
+        position: static;
+        float: left;
     }
     .col-xs-12.textright {
         text-align: left;
